
    * The ``-Dhpss`` debug flag now reports the number of smart server
      calls per medium to stderr.  This is in addition to the existing
      detailed logging to the .bzr.log trace file.  (Andrew Bennetts)

  BUG FIXES:

    * Branching from a shared repository on a smart server into a new
      repository now preserves the repository format.
      (Andrew Bennetts, #269214)

    * ``bzr log`` now accepts a ``--change`` option.
      (Vincent Ladeuil, #248427)

    * ``bzr missing`` now accepts an ``--include-merges`` option.
      (Vincent Ladeuil, #233817)

    * Don't try to filter (internally) '.bzr' from the files to be deleted if
      it's not there.
      (Vincent Ladeuil, #272648)

    * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
      (Andrew Bennetts)

    * Fix TooManyConcurrentRequests errors caused by a connection failure
      when doing ``bzr pull`` or ``bzr merge`` from a ``bzr+ssh`` URL.
      (Andrew Bennetts, #246233)

    * Fixed ``bzr st -r branch:PATH_TO_BRANCH`` where the other branch
      is in a different repository than the current one.
      (Lukáš Lalinský, #144421)

    * Make the first line of the manpage preamble a comment again.
      (David Futcher, #242106)

    * The autopacking logic will now always create a single new pack from
      all of the content which it deems is worth moving. This avoids the
      'repack a single pack' bug and should result in better packing
      overall.  (John Arbash Meinel, #242510, #172644)

    * Trivial documentation fix.
      (John Arbash Meinel, #270471)

  DOCUMENTATION:

    * Explain revision/range identifiers. (Daniel Clemente)

  API CHANGES:

    * ``CommitBuilder.record_entry_contents`` returns one more element in
      its result tuple - an optional file system hash for the hash cache
      to use. (Robert Collins)

    * ``dirstate.DirState.update_entry`` will now only calculate the sha1